--- a/schedule.html
+++ b/schedule.html
@@ -101,8 +101,7 @@
 						style="border-width:0" width="1100" height="600" frameborder="0" scrolling="no"></iframe>
 				</div>
 				<div class="col-lg-6 col-sm-6 musa grid-item">
-					<iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=02f6as6emuu128p8pnd82h9dnc%40group.calendar.google.com&amp;color=%23AB8B00&amp;ctz=Asia%2FDubai"
-					style="border-width:0" width="1100" height="600" frameborder="0" scrolling="no"></iframe>
+					<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FDubai&amp;src=bnNiZnZqZzRjNmt0YmZsOGVvaTZoNWtjbWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23EF6C00&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=1" style="border-width:0" width="1100" height="600" frameborder="0" scrolling="no"></iframe>
 				</div>
 			</div>
 		</div>
