--- a/contact.html
+++ b/contact.html
@@ -74,18 +74,18 @@
                   novalidate="novalidate">
                   <div class="col-md-6">
                       <div class="form-group">
-                          <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
+                          <input type="text" class="form-control" id="name" name="name" placeholder="Your name">
                       </div>
                       <div class="form-group">
-                          <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
+                          <input type="email" class="form-control" id="email" name="email" placeholder="Email address">
                       </div>
                       <div class="form-group">
-                          <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter Subject">
+                          <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone Number">
                       </div>
                   </div>
                   <div class="col-md-6">
                       <div class="form-group">
-                          <textarea class="form-control" name="message" id="message" rows="1" placeholder="Enter Message"></textarea>
+                          <textarea class="form-control" name="message" id="message" rows="1" placeholder="Message"></textarea>
                       </div>
                   </div>
                   <div class="col-md-12 text-right">
