--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/karate1.jpg" alt="">
 						<div class="projects_text">
-							<a href="gallery.html"></a>
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -126,7 +128,9 @@
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/karate2.jpg" alt="">
 						<div class="projects_text">
-							<a href="gallery.html"></a>
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -134,7 +138,9 @@
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/karate3.jpg" alt="">
 						<div class="projects_text">
-							<a href="gallery.html"></a>
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -142,7 +148,9 @@
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/karate4.jpg" alt="">
 						<div class="projects_text">
-							<a href="gallery.html"></a>
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -150,7 +158,19 @@
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/karate5.jpg" alt="">
 						<div class="projects_text">
-							<a href="gallery.html"></a>
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6 col-sm-6 col-sm-12 karate grid-item">
+					<div class="projects_item">
+						<img class="img-fluid w-100" src="img/works/karate10.jpg" alt="">
+						<div class="projects_text">
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -158,7 +178,9 @@
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/karate6.jpg" alt="">
 						<div class="projects_text">
-							<a href="gallery.html"></a>
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -166,7 +188,9 @@
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/karate7.jpg" alt="">
 						<div class="projects_text">
-							<a href="gallery.html"></a>
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -174,7 +198,9 @@
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/karate8.jpg" alt="">
 						<div class="projects_text">
-							<a href="gallery.html"></a>
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -182,7 +208,9 @@
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/karate9.jpg" alt="">
 						<div class="projects_text">
-							<a href="gallery.html"></a>
+							<a href="gallery.html">
+								<h4>Karate</h4>
+							</a>
 						</div>
 					</div>
 				</div>
