--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>About - Asian Karate Club</title>
+	<title>About - Amateur Karate Club</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -39,6 +39,7 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item active"><a class="nav-link" href="about.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="registration.html">Registration</a></li>
 							<li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
 							<li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -70,12 +71,12 @@
 	<section class="about-area section_gap gray-bg">
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
-				<div class="col-lg-5 about-left">
+				<div class="col-lg-5">
 					<img class="img-fluid" src="img/about-img.png" alt="">
 				</div>
 				<div class="col-lg-6 col-md-12 about-right">
 					<div class="main-title text-left">
-						<h1>about asian karate club</h1>
+						<h1>about amateur karate club</h1>
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
@@ -128,7 +129,7 @@
 	<section class="about-area section_gap gray-bg">
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
-				<div class="col-lg-5 about-left">
+				<div class="col-lg-5">
 					<img class="img-fluid" src="img/about-founder.png" alt="">
 				</div>
 				<div class="col-lg-6 col-md-12 about-right">
@@ -149,6 +150,30 @@
 						<p>He is one of the youngest and Accredited  karate coach form UAE Karate Federation.</p>
 						<p>He has a Bachelor Degree in Arts  MS University, India. He played for his high school, college Taekwondo,Baseball and Kabbadi sports team.</p>
 						<p>His passion and dedication towards karate-do, vast martial arts knowledge, experience, tournament achievements and special training skills helps him to produce more champions not only in karate competition but also in life.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<section class="about-area section_gap gray-bg">
+		<div class="container">
+			<div class="row align-items-center justify-content-between">
+				<div class="col-lg-5">
+					<img class="img-fluid" src="img/about-president.jpg" alt="">
+				</div>
+				<div class="col-lg-6 col-md-12 about-right">
+					<div class="main-title text-left">
+						<h1>president - AMMAR HUMAID SAIF ALI AL NUAIMI</h1>
+					</div>
+					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
+						<p>
+							AKC karate club competitive edge is their unique combination of services, location, and student-centric Programs.
+AKC Martial Arts  has set out since its inception to provide quality, dependable services with innovative training programs that is extensive in its depth, properly training students to achieve a high level of Martial Arts & Fitness skills.
+Our hope is that all of our students will feel that AKC martial arts provides beyond their needs, and that we have provided services well beyond any expectations that they previously had and far better than any competitor.
+Classes provided by AKC karate club. (Shotokan Karate).Traditional Martial Arts & Fitness will provide a safe, yet stimulating atmosphere in which students will develop self-confidence through a wide range of training methods in Karate classes.AKC will encourage its students to positively impact their families, community and their world.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -206,9 +231,8 @@ and healthy future</p>
 							<h4>Follow Us</h4>
 						</div>
 						<ul class="list">
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/Amateur-Karate-Club-Musaffah-214520118719432/"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCT5i9FTgINHjbJXHqo_uKcQ"><i class="fa fa-youtube"></i></a></li>
 						</ul>
 					</aside>
 					<div class="copyright">
