--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   	<link rel="icon" href="img/favicon.png" type="image/png">
-  	<title>Contact - Asian Karate Club</title>
+  	<title>Contact - Amateur Karate Club</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -39,6 +39,7 @@
   						<ul class="nav navbar-nav menu_nav justify-content-end">
   							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
   							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="registration.html">Registration</a></li>
   							<li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
   							<li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
   							<li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -177,9 +178,8 @@ office, Mezzanine M-4</p>
                 <h4>Follow Us</h4>
               </div>
               <ul class="list">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/Amateur-Karate-Club-Musaffah-214520118719432/"><i class="fa fa-facebook"></i></a></li>
+  							<li><a href="https://www.youtube.com/channel/UCT5i9FTgINHjbJXHqo_uKcQ"><i class="fa fa-youtube"></i></a></li>
               </ul>
             </aside>
             <div class="copyright">
