--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>Gallery - Asian Karate Club</title>
+	<title>Gallery - Amateur Karate Club</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -70,6 +70,7 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="registration.html">Registration</a></li>
 							<li class="nav-item active"><a class="nav-link" href="gallery.html">Gallery</a></li>
 							<li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -221,6 +222,7 @@
 								<li><a href="#"><img src="images/thumbs/101.jpg" data-large="images/101.jpg" alt="image101" data-description="" /></a></li>
 								<li><a href="#"><img src="images/thumbs/102.jpg" data-large="images/102.jpg" alt="image102" data-description="" /></a></li>
 								<li><a href="#"><img src="images/thumbs/103.jpg" data-large="images/103.jpg" alt="image103" data-description="" /></a></li>
+								<li><a href="#"><img src="images/thumbs/104.jpg" data-large="images/104.jpg" alt="image104" data-description="" /></a></li>
 							</ul>
 						</div>
 					</div>
@@ -245,9 +247,8 @@
 							<h4>Follow Us</h4>
 						</div>
 						<ul class="list">
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/Amateur-Karate-Club-Musaffah-214520118719432/"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCT5i9FTgINHjbJXHqo_uKcQ"><i class="fa fa-youtube"></i></a></li>
 						</ul>
 					</aside>
 					<div class="copyright">
