--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>Asian Karate Club</title>
+	<title>Amateur Karate Club</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -40,6 +40,7 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="registration.html">Registration</a></li>
 							<li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
 							<li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -57,25 +58,25 @@
 			<div class="container">
 				<div class="row fullscreen d-flex align-items-center" style="height: 900px;">
 					<div class="banner-content col-lg-12 justify-content-center">
-						<h1>Asian Karate Club</h1>
+						<h1>Amateur Karate <br/>Club</h1>
 						<h3>Welcome to the world of Karate</h3>
-						<a href="#" class="primary-btn">Contact : 0589532563</a>
+						<a href="#" class="primary-btn">Contact : 0508928567</a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- <div class="single_slide_banner slide_bg2">
+		<div class="single_slide_banner slide_bg2">
 			<div class="container">
 				<div class="row fullscreen d-flex align-items-center">
 					<div class="banner-content col-lg-12 justify-content-center">
-						<h1>Steve Henriques</h1>
-						<h3>Personal portfolio Website</h3>
-						<a href="#" class="primary-btn">Hire Me</a>
+						<h1>Amateur Karate </br>Club</h1>
+						<h3>Welcome to the world of Karate</h3>
+						<a href="#" class="primary-btn">Contact : 0508928567</a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="single_slide_banner slide_bg3">
+		<!--<div class="single_slide_banner slide_bg3">
 			<div class="container">
 				<div class="row fullscreen justify-content-endd-flex align-items-center">
 					<div class="banner-content col-lg-12 justify-content-center">
@@ -96,7 +97,7 @@
 				<div class="col-lg-6 text-center">
 					<div class="main-title">
 						<h1>YOUR FIRST SESSION IS COMPLIMENTARY</h1>
-						<p>Contact us by calling 025589237 or submitting the FREE Trial form. We'll answer your queries and help you choose the most appropriate class to attend. On the day of your first class, please arrive 10 minutes earlier to register at Reception. It's normal to feel a little nervous before your first training session. However, after registering you'll be welcomed into class to join a group exercise warm-up. Afterwards one of our senior instructors will take you aside for some basic karate training. We welcome all age groups and fitness levels to experience one of our exciting Shotokan Karate classes.</p>
+						<p>Contact us by calling <font color="#1e74ff"></b>0508928567</b></font> or submitting the <a href="registration.html"><font color="#1e74ff">Registration</font></a> form. We'll answer your queries and help you choose the most appropriate class to attend. On the day of your first class, please arrive 10 minutes earlier to register at Reception. It's normal to feel a little nervous before your first training session. However, after registering you'll be welcomed into class to join a group exercise warm-up. Afterwards one of our senior instructors will take you aside for some basic karate training. We welcome all age groups and fitness levels to experience one of our exciting Shotokan Karate classes.</p>
 					</div>
 				</div>
 			</div>
@@ -396,7 +397,7 @@
 				</div>
 				<div class="col-lg-6 col-md-12 about-right">
 					<div class="main-title text-left">
-						<h1>about asian karate club</h1>
+						<h1>about amateur karate club</h1>
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
@@ -449,46 +450,6 @@ and healthy future </p>
 	</div>
 	<!--================ End Testimonial Area =================-->
 
-	<!--================ Start Newsletter Area =================-->
-	<section class="section_gap newsletter-area">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-6 text-center">
-					<div class="main-title">
-						<h1>Get Updates from AKC</h1>
-
-					</div>
-				</div>
-			</div>
-			<div class="row newsletter_form justify-content-center">
-				<div class="col-lg-6 col-md-6 col-sm-6">
-					<div class="d-flex flex-row" id="mc_embed_signup">
-						<form class="w-100" novalidate="true" action=""
-						 method="get">
-							<div class="navbar-form">
-								<div class="input-group add-on">
-									<input class="form-control" name="EMAIL" placeholder="Your email address" onfocus="this.placeholder = ''"
-									 onblur="this.placeholder = 'Your email address'" required="" type="email">
-									<div style="position: absolute; left: -5000px;">
-										<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-									</div>
-									<div class="input-group-btn">
-										<button class="genric-btn text-uppercase">
-											Subscribe
-										</button>
-									</div>
-								</div>
-							</div>
-							<div class="info mt-20"></div>
-						</form>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================ End Newsletter Area =================-->
-
 	<!--================ Start Footer Area =================-->
 	<footer class="footer_area section_gap">
 		<div class="container">
@@ -502,9 +463,8 @@ and healthy future </p>
 							<h4>Follow Us</h4>
 						</div>
 						<ul class="list">
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/Amateur-Karate-Club-Musaffah-214520118719432/"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCT5i9FTgINHjbJXHqo_uKcQ"><i class="fa fa-youtube"></i></a></li>
 						</ul>
 					</aside>
 					<div class="copyright">
