--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>Schedule - Asian Karate Club</title>
+	<title>Schedule - Amateur Karate Club</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -45,6 +45,7 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="registration.html">Registration</a></li>
 							<li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
 							<li class="nav-item active"><a class="nav-link" href="schedule.html">Schedule</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -58,7 +59,7 @@
 
 	<!--================ Start portfolio Banner Area =================-->
 	<section class="banner_area">
-		<div class="banner_inner d-flex align-items-center">
+		<div class="banner_inner1 d-flex align-items-center">
 			<div class="container">
 				<div class="banner_content text-right">
 					<h1>Schedule</h1>
@@ -79,7 +80,7 @@
 				<div class="col-lg-6 text-center">
 					<div class="main-title">
 						<h1>YOUR FIRST SESSION IS COMPLIMENTARY</h1>
-						<p>Contact us by calling 025589237 or submitting the FREE Trial form. We'll answer your queries and help you choose the most appropriate class to attend. On the day of your first class, please arrive 10 minutes earlier to register at Reception. It's normal to feel a little nervous before your first training session. However, after registering you'll be welcomed into class to join a group exercise warm-up. Afterwards one of our senior instructors will take you aside for some basic karate training. We welcome all age groups and fitness levels to experience one of our exciting Shotokan Karate classes.</p>
+						<p>Contact us by calling <font color="#1e74ff"></b>0508928567</b></font> or submitting the <a href="registration.html"><font color="#1e74ff">Registration</font></a> form. We'll answer your queries and help you choose the most appropriate class to attend. On the day of your first class, please arrive 10 minutes earlier to register at Reception. It's normal to feel a little nervous before your first training session. However, after registering you'll be welcomed into class to join a group exercise warm-up. Afterwards one of our senior instructors will take you aside for some basic karate training. We welcome all age groups and fitness levels to experience one of our exciting Shotokan Karate classes.</p>
 					</div>
 				</div>
 			</div>
@@ -87,7 +88,7 @@
 				<div class="col-lg-10">
 					<div class="projects_fillter">
 						<ul class="filter list">
-							<li class="active" data-filter=".karate">Asian Karate Club - Abu Dhabi </li>
+							<li class="active" data-filter=".karate">Amateur Karate Club - Abu Dhabi </li>
 							<li data-filter=".musa">Amateur Karate Club - Musaffah</li>
 						</ul>
 					</div>
@@ -121,9 +122,8 @@
 							<h4>Follow Us</h4>
 						</div>
 						<ul class="list">
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/Amateur-Karate-Club-Musaffah-214520118719432/"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCT5i9FTgINHjbJXHqo_uKcQ"><i class="fa fa-youtube"></i></a></li>
 						</ul>
 					</aside>
 					<div class="copyright">
