--- a/about.html
+++ b/about.html
@@ -181,6 +181,37 @@ Classes provided by AKC karate club. (Shotokan Karate).Traditional Martial Arts 
 	</section>
 	<!--================ End About Area =================-->
 
+	<div class="section-top-border">
+		<h1 class="title_color" align="center">Instructors</h3>
+		<div class="row gallery-item">
+			<div class="col-md-4">
+					<div class="single-gallery-image" style="background: url(img/team/1.jpg);"></div>
+					</br>
+					<h4 class="mb-20" align="center">Instructor - Mohammed Sakeer</h4>
+			</div>
+			<div class="col-md-4">
+					<div class="single-gallery-image" style="background: url(img/team/2.jpg);"></div>
+					</br>
+					<h4 class="mb-20" align="center">Instructor - Irshad</h4>
+			</div>
+			<div class="col-md-4">
+					<div class="single-gallery-image" style="background: url(img/team/3.jpg);"></div>
+					</br>
+					<h4 class="mb-20" align="center">Instructor - Christian Jay Pajo</h4>
+			</div>
+			<div class="col-md-4">
+					<div class="single-gallery-image" style="background: url(img/team/4.jpg);"></div>
+					</br>
+					<h4 class="mb-20" align="center">Instructor - Jithin</h4>
+			</div>
+			<div class="col-md-4">
+					<div class="single-gallery-image" style="background: url(img/team/5.jpg);"></div>
+					</br>
+					<h4 class="mb-20" align="center">Instructor - Sameesh</h4>
+			</div>
+		</div>
+	</div>
+
 	<!--================ Start Testimonial Area =================-->
 	<div class="section_gap testimonial_area">
 		<div class="container">
