--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                     <div class="contact_info">
                         <div class="info_item">
                             <i class="lnr lnr-home"></i>
-                            <h6>Asian karate club - Abu Dhabi</h6>
+                            <h6>Asian Karate Club - Abu Dhabi</h6>
                             <p>P.O. Box 9462
 Electra street
 Behind Honda showroom
