--- a/schedule.html
+++ b/schedule.html
@@ -88,7 +88,7 @@
 				<div class="col-lg-10">
 					<div class="projects_fillter">
 						<ul class="filter list">
-							<li class="active" data-filter=".karate">Amateur Karate Club - Abu Dhabi </li>
+							<li class="active" data-filter=".karate">Asian Karate Club - Abu Dhabi </li>
 							<li data-filter=".musa">Amateur Karate Club - Musaffah</li>
 						</ul>
 					</div>
