--- a/about.html
+++ b/about.html
@@ -209,6 +209,11 @@ Classes provided by AKC karate club. (Shotokan Karate).Traditional Martial Arts 
 					</br>
 					<h4 class="mb-20" align="center">Instructor - Sameesh</h4>
 			</div>
+			<div class="col-md-4">
+					<div class="single-gallery-image" style="background: url(img/team/6.jpg);"></div>
+					</br>
+					<h4 class="mb-20" align="center">Supervisor - Jeseela</h4>
+			</div>
 		</div>
 	</div>
 
