--- a/contact.html
+++ b/contact.html
@@ -126,9 +126,6 @@ Abu Dhabi</p>
         </div>
     </section>
 
-
-
-
     <section class="contact_area section_gap">
         <div class="container">
             <div class="row">
@@ -136,12 +133,12 @@ Abu Dhabi</p>
                   <div class="contact_info">
                       <div class="info_item">
                           <i class="lnr lnr-home"></i>
-                          <h6>Amateur Karate Club - Musaffah</h6>
-                          <p>Shabia 12, Muhamed bin Zayed city,
+                          <h6>Amateur Karate Club - Musaffah Shabia 12</h6>
+                          <p>Muhamed Bin Zayed City,
 P.O. Box 9462,
-Near Al Bashair schools
+Near Al Bashair Schools
 Bulding #P/634 or Plot No.C245
-office, Mezzanine M-4</p>
+Fffice, Mezzanine M-4</p>
                       </div>
                       <div class="info_item">
                           <i class="lnr lnr-phone-handset"></i>
@@ -157,6 +154,36 @@ office, Mezzanine M-4</p>
                 </div>
             </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3635.7686925503795!2d54.533310914992185!3d24.31970208431185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDE5JzEwLjkiTiA1NMKwMzInMDcuOCJF!5e0!3m2!1sen!2sin!4v1556640079275!5m2!1sen!2sin" width="1000" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="contact_area section_gap">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                  <div class="contact_info">
+                      <div class="info_item">
+                          <i class="lnr lnr-home"></i>
+                          <h6>Amateur Karate Club - Musaffah Shabia 9</h6>
+                          <p>Land Mark:Saravana Bhavan Restaurant Building.
+Buld# P/1176 plot No C80, Mezzanine 2</p>
+                      </div>
+                      <div class="info_item">
+                          <i class="lnr lnr-phone-handset"></i>
+                          <h6><a href="#">Telephone ☎ 025620011</br> Mobile : 0508928568</a></h6>
+                          <p></p>
+                      </div>
+                      <div class="info_item">
+                          <i class="lnr lnr-envelope"></i>
+                          <h6><a href="#">info@akc.com</a></h6>
+                          <p>Send us your query anytime!</p>
+                      </div>
+                  </div>
+                </div>
+            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d908.7710044973815!2d54.535830588145494!3d24.343565799013934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5e475963838887%3A0x536c0e56a159a87!2s14+Musari+St+-+Abu+Dhabi+-+United+Arab+Emirates!5e0!3m2!1sen!2sin!4v1563974516786!5m2!1sen!2sin" width="1000" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </section>
