--- a/schedule.html
+++ b/schedule.html
@@ -89,7 +89,8 @@
 					<div class="projects_fillter">
 						<ul class="filter list">
 							<li class="active" data-filter=".karate">Asian Karate Club - Abu Dhabi </li>
-							<li data-filter=".musa">Amateur Karate Club - Musaffah</li>
+							<li data-filter=".musa">Amateur Karate Club - Musaffah Shabia 12</li>
+							<li data-filter=".musa9">Amateur Karate Club - Musaffah Shabia 9</li>
 						</ul>
 					</div>
 				</div>
@@ -103,6 +104,9 @@
 				</div>
 				<div class="col-lg-6 col-sm-6 musa grid-item">
 					<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FDubai&amp;src=bnNiZnZqZzRjNmt0YmZsOGVvaTZoNWtjbWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23EF6C00&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=1" style="border-width:0" width="1100" height="600" frameborder="0" scrolling="no"></iframe>
+				</div>
+				<div class="col-lg-6 col-sm-6 musa9 grid-item">
+					<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FDubai&amp;src=NW9hdGEwbm5yYWZrM2plNTRoOTY3ZGpkbjBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23F4511E&amp;showNav=1&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0" style="border-width:0" width="1100" height="600" frameborder="0" scrolling="no"></iframe>
 				</div>
 			</div>
 		</div>
